Add dark mode theme switcher, download resume button, scroll animations, and performance optimizations

--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
     
     <!-- Theme Color -->
     <meta name="theme-color" content="#2563eb" />
+    
+    <!-- Preload critical resources -->
+    <link rel="preload" href="/SmartyApplyY.png" as="image" />
+    <link rel="preload" href="/smart-calendar.png" as="image" />
   </head>
   <body>
     <div id="root"></div>
